# graph_tutorials

./: .env.template  .gitignore  Dockerfile  README.md  agentic_plan.pptx  hierarchy.xlsx  podman-compose.yml  pyproject.toml  ruff.toml
private_templates/: agentic_plan1.pptx  slide_template.pptx  slide_template_blank.pptx
requirements_docs/: requirements.txt
script/: config.bat  my_echo_service.bat  my_multiple_echo_servers.bat  pip_generate_pipvenv.bat  run_graphql.bat  stop_echo_servers.bat  uv_generate_venv.bat
script copy/: config.bat
script/installation/: install_a_helper.bat  install_a_helper_init.bat
script/installation/a/: install_a copy.bat  install_a.bat  install_a_helper.bat  install_all.bat  (+1 more)
src/: driver.py  first.py  main.py
src/agentic_vis/: agentic_plan.pptx  config.py  draw.py  excel_utils.py  harvey.py  harvey_old.py  main.py  openers.py  theme_and_title.py  write_surround.py
src/api_test/: client.py  echo_server.py  echo_server2.py  graphl_client_test2.py  graphql_client_test.py  graphql_client_test10.py  graphql_client_test11.py  graphql_client_test12.py  graphql_client_test13.py  graphql_client_test3.py  graphql_client_test4.py  graphql_client_test5.py  graphql_client_test6.py  graphql_client_test7.py  graphql_client_test8.py  graphql_client_test9.py  graphql_test.py  graphql_test10.py  graphql_test11.py  graphql_test12.py  graphql_test13.py  graphql_test2.py  graphql_test3.py  graphql_test4.py  graphql_test5.py  graphql_test6.py  graphql_test7.py  graphql_test8.py  graphql_test9.py  main.py
src/neo4j_graph/: driver.py  scraper.py
(+5 files in other folders)
